# athena

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
src/athena/core/: __init__.py
src/athena/core/ai_models/: __init__.py
src/athena/core/ai_models/claude/: claude_client.py  claude_config.py
src/athena/core/ai_models/deepseek/: deepseek_client.py  deepseek_config.py
src/athena/core/ai_models/gemini/: gemini_client.py  gemini_config.py
src/athena/core/ai_models/groq/: groq_client.py  groq_config.py
src/athena/core/ai_models/mistral/: mistral_client.py  mistral_config.py
src/athena/core/ai_models/ollama/: ollama_client.py  ollama_config.py
src/athena/core/ai_models/openai/: openai_client.py  openai_config.py
src/athena/core/ai_models/openrouter/: openrouter_client.py  openrouter_config.py
src/athena/core/ai_models/shared/: __init__.py  llm_base.py  schemas.py
src/athena/core/ai_models/vertexai/: vertex_client.py  vertex_config.py
src/athena/core/ai_models/xai/: xai_client.py  xai_config.py
src/athena/core/clients/: __init__.py  client_base.py
src/athena/core/clients/telegram_client/: __init__.py  acc_client_init.py  bot_client_init.py  telegram_config.py
src/athena/core/deus/athena/: athena_instance.py  athena_persona.py
src/athena/core/organon/: README.md  __init__.py  organon_config.py  organon_model.py  organon_utils.py
src/athena/core/system/: __init__.py  config.py  diskcache.py
src/athena/core/utils/: __init__.py  fomatter.py
src/athena/features/telegram/: __init__.py
(+36 files in other folders)
